agregar la pestaña reseña

--- a/aplicaciones.html
+++ b/aplicaciones.html
@@ -16,6 +16,7 @@
                 <li><a href="componentes.html">Componentes y Tecnologías Clave</a></li>
                 <li><a href="aplicaciones.html">Aplicaciones de la Robótica</a></li>
                 <li><a href="futuro.html">Proyectos y Desarrollos Futuristas</a></li>
+                <li><a href="reseña.html">Reseña de autor</a></li>
             </ul>
         </div>
     </header>
