--- a/reseña.html
+++ b/reseña.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/estilo.css">
     <title>Document</title>
 </head>
 <body>
@@ -24,11 +25,11 @@
 
 <h3>Alex Pan Chen</h3>
 <p>Soy Alex Pan Chen, estudiante de desarrollo de software apasionado por la tecnología, en especial por la robótica y la inteligencia artificial. Actualmente, curso mi segundo año de estudios, donde he tenido la oportunidad de aprender y desarrollar proyectos relacionados con diversas áreas de la programación, incluyendo el diseño de aplicaciones, bases de datos y sistemas embebidos como Arduino y Raspberry Pi.</p>
-<div class="centrar"><img src="img/alexpan.jpeg" alt="Alex Pan Chen" height="320px" width="500px"></div>
+<div class="centrar"><img src="img/alexpan.jpeg" alt="Alex Pan Chen" height="420px" width="500px"></div>
 <p>Mi interés en la robótica surge del deseo de entender cómo las máquinas pueden realizar tareas complejas y, en el futuro, ayudar a mejorar la vida de las personas mediante soluciones automatizadas. Este sitio web es una muestra de mi curiosidad por el mundo de la robótica, y refleja tanto mis conocimientos como mi visión de los avances tecnológicos que están por venir.</p>
 <h4>Contacto:</h4>
 <p>Puedes contactarme para colaboraciones o consultas a través de:
-    Correo electrónico: <a href="mailto:alex.pan@utp.ac.pa"></a></p>
+    Correo electrónico: <a href="mailto:alex.pan@utp.ac.pa">alex.pan@utp.ac.pa</a></p>
 </div>
     <footer>
         <p>© 2024 Alex Pan Chen - Parcial 2</p>
